// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BadgePrintingSystemTab should render 1`] = `
<div>
  <div>
    <div
      class="makeStyles-filterActionsContainer-547 makeStyles-filterActionsContainerPadding-549 makeStyles-buttonWithoutFilter-605"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-createButton-577 makeStyles-primaryButtonExtraLarge-581 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        data-testid="open-bps-modal-btn"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Assign BPS
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <table
      aria-label="client-list"
      class="MuiTable-root"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Name
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Laptop Serial Number
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Printer Serial Number
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Scanner Serial Number
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Shipping Date
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-701 makeStyles-clickableRow-699"
          data-testid="bps-list-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <a
              class="Link-root-702"
              href="/inventory/badge-printing-system/wizard/77afbfce-1bca-31c3-b512-3a1ed78742bb"
              title="Edit BPS"
            >
              Badge Printer Name
            </a>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            AFF12903112
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            12904328913
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            BBF19021
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            May 19, 2020
          </td>
        </tr>
      </tbody>
    </table>
    <nav
      aria-label="pagination navigation"
      class="MuiPagination-root  makeStyles-pagination-703"
      data-testid="pagination"
    >
      <ul
        class="MuiPagination-ul"
      >
        <li>
          <button
            aria-label="Go to previous page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-current="true"
            aria-label="page 1"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-selected"
            tabindex="0"
            type="button"
          >
            1
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </li>
        <li>
          <button
            aria-label="Go to next page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </nav>
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-712 makeStyles-close-723 closed"
      data-testid="drawer"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-713 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
        style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
      >
        <div
          class="makeStyles-drawerButtonWrapper-715"
        >
          <div
            class="makeStyles-drawerButton-716"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text"
              data-testid="drawer-close-btn"
              style="outline: none;"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <svg>
                  close.svg
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="makeStyles-drawerHeader-714"
          >
            <p
              class="MuiTypography-root makeStyles-drawerTitle-717 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
            >
              Device Information
            </p>
          </div>
        </div>
        <div
          class="makeStyles-summaryDeviceDetail-729"
        >
          <div
            class="makeStyles-company-733"
          >
            <div
              class="makeStyles-drawerOverflowWrapper-748"
            >
              <div
                class="makeStyles-drawerText-740"
              >
                <p
                  class="MuiTypography-root makeStyles-deviceAccent-734 makeStyles-entityTitle-743 MuiTypography-body1"
                />
                <div
                  class="makeStyles-drawerMainText-741"
                >
                  <span>
                    No project assigned
                  </span>
                  <span />
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-736"
              >
                <svg
                  class="makeStyles-drawerNotesIcon-737"
                >
                  notes.svg
                </svg>
                <div
                  class="makeStyles-drawerText-740 makeStyles-drawerTextSeparation-742"
                >
                  <span>
                    -
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-736"
              >
                <div
                  class="makeStyles-drawerText-740"
                >
                  <p
                    class="MuiTypography-root makeStyles-deviceAccent-734 makeStyles-entityTitle-743 MuiTypography-body1"
                  >
                    Laptop
                  </p>
                  <div
                    class="makeStyles-drawerMainText-741"
                  >
                    <span>
                      -
                    </span>
                    <span>
                      -
                    </span>
                    <span>
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-736"
              >
                <div
                  class="makeStyles-drawerColumnDirection-747"
                >
                  <div
                    class="makeStyles-drawerRowDirection-746"
                  >
                    <svg
                      class="makeStyles-drawerMonetizationIcon-739 makeStyles-bpsIconSize-749"
                    >
                      monetization.svg
                    </svg>
                    <div
                      class="makeStyles-drawerText-740 makeStyles-drawerTextSeparation-742"
                    >
                      <span>
                        $
                        -
                      </span>
                      <span>
                        -
                      </span>
                      <span>
                        Invoiced 
                        -
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-736"
              >
                <div
                  class="makeStyles-drawerRowDirection-746"
                >
                  <svg
                    class="makeStyles-bpsIconSize-749"
                  >
                    device-status.svg
                  </svg>
                  <div
                    class="makeStyles-drawerText-740 makeStyles-drawerTextSeparation-742"
                  >
                    <span>
                      Order/Purchase Date:
                       
                      
                    </span>
                    <span>
                      Warranty Expiration Date:
                       
                      
                    </span>
                    <span>
                      In Service Date:
                       
                      
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-736"
              >
                <svg
                  class="makeStyles-drawerSecondaryNotesIcon-738"
                >
                  notes.svg
                </svg>
                <div
                  class="makeStyles-drawerText-740 makeStyles-drawerTextSeparation-742"
                >
                  <span>
                    -
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-736"
              >
                <div
                  class="makeStyles-drawerText-740"
                >
                  <p
                    class="MuiTypography-root makeStyles-deviceAccent-734 makeStyles-entityTitle-743 MuiTypography-body1"
                  >
                    Printer
                  </p>
                  <div
                    class="makeStyles-drawerMainText-741"
                  >
                    <span>
                      -
                    </span>
                    <span>
                      -
                    </span>
                    <span>
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-736"
              >
                <div
                  class="makeStyles-drawerColumnDirection-747"
                >
                  <div
                    class="makeStyles-drawerRowDirection-746"
                  >
                    <svg
                      class="makeStyles-drawerMonetizationIcon-739"
                    >
                      monetization.svg
                    </svg>
                    <div
                      class="makeStyles-drawerText-740 makeStyles-drawerTextSeparation-742"
                    >
                      <span>
                        $
                        -
                      </span>
                      <span>
                        -
                      </span>
                      <span>
                        Invoiced 
                        -
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-736"
              >
                <div
                  class="makeStyles-drawerRowDirection-746"
                >
                  <svg
                    class="makeStyles-bpsIconSize-749"
                  >
                    device-status.svg
                  </svg>
                  <div
                    class="makeStyles-drawerText-740 makeStyles-drawerTextSeparation-742"
                  >
                    <span>
                      Order/Purchase Date:
                       
                      
                    </span>
                    <span>
                      Warranty Expiration Date:
                       
                      
                    </span>
                    <span>
                      Last Maintenance Date:
                       
                      
                    </span>
                    <span>
                      In Service Date:
                       
                      
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-736"
              >
                <svg
                  class="makeStyles-drawerSecondaryNotesIcon-738"
                >
                  notes.svg
                </svg>
                <div
                  class="makeStyles-drawerText-740 makeStyles-drawerTextSeparation-742"
                >
                  <span>
                    -
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-736"
              >
                <div
                  class="makeStyles-drawerText-740"
                >
                  <p
                    class="MuiTypography-root makeStyles-deviceAccent-734 makeStyles-entityTitle-743 MuiTypography-body1"
                  >
                    Scanner
                  </p>
                  <div
                    class="makeStyles-drawerMainText-741"
                  >
                    <span>
                      -
                    </span>
                    <span>
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-736"
              >
                <div
                  class="makeStyles-drawerColumnDirection-747"
                >
                  <div
                    class="makeStyles-drawerRowDirection-746"
                  >
                    <svg
                      class="makeStyles-drawerMonetizationIcon-739"
                    >
                      monetization.svg
                    </svg>
                    <div
                      class="makeStyles-drawerText-740 makeStyles-drawerTextSeparation-742"
                    >
                      <span>
                        $
                        -
                      </span>
                      <span>
                        -
                      </span>
                      <span>
                        Invoiced 
                        -
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-736"
              >
                <div
                  class="makeStyles-drawerRowDirection-746"
                >
                  <svg
                    class="makeStyles-bpsIconSize-749"
                  >
                    device-status.svg
                  </svg>
                  <div
                    class="makeStyles-drawerText-740 makeStyles-drawerTextSeparation-742"
                  >
                    <span>
                      Order/Purchase Date:
                       
                      
                    </span>
                    <span>
                      Warranty Expiration Date:
                       
                      
                    </span>
                    <span>
                      In Service Date:
                       
                      
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-736"
              >
                <svg
                  class="makeStyles-drawerSecondaryNotesIcon-738"
                >
                  notes.svg
                </svg>
                <div
                  class="makeStyles-drawerText-740 makeStyles-drawerTextSeparation-742"
                >
                  <span>
                    -
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root makeStyles-drawerDivider-615"
        />
        <div
          class="makeStyles-ctaWrapper-694"
        >
          <span
            class=""
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-drawerCTA-584 makeStyles-borderPrimaryButton-576"
              data-testid="bps-edition-modal-open-btn"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Edit Date
              </span>
            </button>
          </span>
          <span
            class=""
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-drawerCTA-584 makeStyles-warningButton-585"
              data-testid="unassign-btn"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Unassign
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BadgePrintingSystemTab should render empty 1`] = `
<div>
  <div>
    <div
      class="makeStyles-filterActionsContainer-37 makeStyles-filterActionsContainerPadding-39 makeStyles-buttonWithoutFilter-95"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-createButton-67 makeStyles-primaryButtonExtraLarge-71 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        data-testid="open-bps-modal-btn"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Assign BPS
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      class=" makeStyles-container-168"
    >
      <div>
        <div
          class="MuiAvatar-root MuiAvatar-circle makeStyles-missingAvatarWrapper-179 makeStyles-missingAvatarBig-180 MuiAvatar-colorDefault"
        >
          <svg>
            inventory.svg
          </svg>
        </div>
      </div>
      <p
        class="MuiTypography-root makeStyles-missingListText-169 MuiTypography-body1"
      >
        There are no BPS assigned
      </p>
    </div>
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-218 makeStyles-close-229 closed"
      data-testid="drawer"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-219 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
        style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
      >
        <div
          class="makeStyles-drawerButtonWrapper-221"
        >
          <div
            class="makeStyles-drawerButton-222"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text"
              data-testid="drawer-close-btn"
              style="outline: none;"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <svg>
                  close.svg
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="makeStyles-drawerHeader-220"
          >
            <p
              class="MuiTypography-root makeStyles-drawerTitle-223 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
            >
              Device Information
            </p>
          </div>
        </div>
        <div
          class="makeStyles-summaryDeviceDetail-235"
        >
          <div
            class="makeStyles-company-239"
          >
            <div
              class="makeStyles-drawerOverflowWrapper-254"
            >
              <div
                class="makeStyles-drawerText-246"
              >
                <p
                  class="MuiTypography-root makeStyles-deviceAccent-240 makeStyles-entityTitle-249 MuiTypography-body1"
                />
                <div
                  class="makeStyles-drawerMainText-247"
                >
                  <span>
                    No project assigned
                  </span>
                  <span />
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-242"
              >
                <svg
                  class="makeStyles-drawerNotesIcon-243"
                >
                  notes.svg
                </svg>
                <div
                  class="makeStyles-drawerText-246 makeStyles-drawerTextSeparation-248"
                >
                  <span>
                    -
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-242"
              >
                <div
                  class="makeStyles-drawerText-246"
                >
                  <p
                    class="MuiTypography-root makeStyles-deviceAccent-240 makeStyles-entityTitle-249 MuiTypography-body1"
                  >
                    Laptop
                  </p>
                  <div
                    class="makeStyles-drawerMainText-247"
                  >
                    <span>
                      -
                    </span>
                    <span>
                      -
                    </span>
                    <span>
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-242"
              >
                <div
                  class="makeStyles-drawerColumnDirection-253"
                >
                  <div
                    class="makeStyles-drawerRowDirection-252"
                  >
                    <svg
                      class="makeStyles-drawerMonetizationIcon-245 makeStyles-bpsIconSize-255"
                    >
                      monetization.svg
                    </svg>
                    <div
                      class="makeStyles-drawerText-246 makeStyles-drawerTextSeparation-248"
                    >
                      <span>
                        $
                        -
                      </span>
                      <span>
                        -
                      </span>
                      <span>
                        Invoiced 
                        -
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-242"
              >
                <div
                  class="makeStyles-drawerRowDirection-252"
                >
                  <svg
                    class="makeStyles-bpsIconSize-255"
                  >
                    device-status.svg
                  </svg>
                  <div
                    class="makeStyles-drawerText-246 makeStyles-drawerTextSeparation-248"
                  >
                    <span>
                      Order/Purchase Date:
                       
                      
                    </span>
                    <span>
                      Warranty Expiration Date:
                       
                      
                    </span>
                    <span>
                      In Service Date:
                       
                      
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-242"
              >
                <svg
                  class="makeStyles-drawerSecondaryNotesIcon-244"
                >
                  notes.svg
                </svg>
                <div
                  class="makeStyles-drawerText-246 makeStyles-drawerTextSeparation-248"
                >
                  <span>
                    -
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-242"
              >
                <div
                  class="makeStyles-drawerText-246"
                >
                  <p
                    class="MuiTypography-root makeStyles-deviceAccent-240 makeStyles-entityTitle-249 MuiTypography-body1"
                  >
                    Printer
                  </p>
                  <div
                    class="makeStyles-drawerMainText-247"
                  >
                    <span>
                      -
                    </span>
                    <span>
                      -
                    </span>
                    <span>
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-242"
              >
                <div
                  class="makeStyles-drawerColumnDirection-253"
                >
                  <div
                    class="makeStyles-drawerRowDirection-252"
                  >
                    <svg
                      class="makeStyles-drawerMonetizationIcon-245"
                    >
                      monetization.svg
                    </svg>
                    <div
                      class="makeStyles-drawerText-246 makeStyles-drawerTextSeparation-248"
                    >
                      <span>
                        $
                        -
                      </span>
                      <span>
                        -
                      </span>
                      <span>
                        Invoiced 
                        -
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-242"
              >
                <div
                  class="makeStyles-drawerRowDirection-252"
                >
                  <svg
                    class="makeStyles-bpsIconSize-255"
                  >
                    device-status.svg
                  </svg>
                  <div
                    class="makeStyles-drawerText-246 makeStyles-drawerTextSeparation-248"
                  >
                    <span>
                      Order/Purchase Date:
                       
                      
                    </span>
                    <span>
                      Warranty Expiration Date:
                       
                      
                    </span>
                    <span>
                      Last Maintenance Date:
                       
                      
                    </span>
                    <span>
                      In Service Date:
                       
                      
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-242"
              >
                <svg
                  class="makeStyles-drawerSecondaryNotesIcon-244"
                >
                  notes.svg
                </svg>
                <div
                  class="makeStyles-drawerText-246 makeStyles-drawerTextSeparation-248"
                >
                  <span>
                    -
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-242"
              >
                <div
                  class="makeStyles-drawerText-246"
                >
                  <p
                    class="MuiTypography-root makeStyles-deviceAccent-240 makeStyles-entityTitle-249 MuiTypography-body1"
                  >
                    Scanner
                  </p>
                  <div
                    class="makeStyles-drawerMainText-247"
                  >
                    <span>
                      -
                    </span>
                    <span>
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-242"
              >
                <div
                  class="makeStyles-drawerColumnDirection-253"
                >
                  <div
                    class="makeStyles-drawerRowDirection-252"
                  >
                    <svg
                      class="makeStyles-drawerMonetizationIcon-245"
                    >
                      monetization.svg
                    </svg>
                    <div
                      class="makeStyles-drawerText-246 makeStyles-drawerTextSeparation-248"
                    >
                      <span>
                        $
                        -
                      </span>
                      <span>
                        -
                      </span>
                      <span>
                        Invoiced 
                        -
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-242"
              >
                <div
                  class="makeStyles-drawerRowDirection-252"
                >
                  <svg
                    class="makeStyles-bpsIconSize-255"
                  >
                    device-status.svg
                  </svg>
                  <div
                    class="makeStyles-drawerText-246 makeStyles-drawerTextSeparation-248"
                  >
                    <span>
                      Order/Purchase Date:
                       
                      
                    </span>
                    <span>
                      Warranty Expiration Date:
                       
                      
                    </span>
                    <span>
                      In Service Date:
                       
                      
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-242"
              >
                <svg
                  class="makeStyles-drawerSecondaryNotesIcon-244"
                >
                  notes.svg
                </svg>
                <div
                  class="makeStyles-drawerText-246 makeStyles-drawerTextSeparation-248"
                >
                  <span>
                    -
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root makeStyles-drawerDivider-105"
        />
        <div
          class="makeStyles-ctaWrapper-211"
        >
          <span
            class=""
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-drawerCTA-74 makeStyles-borderPrimaryButton-66"
              data-testid="bps-edition-modal-open-btn"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Edit Date
              </span>
            </button>
          </span>
          <span
            class=""
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-drawerCTA-74 makeStyles-warningButton-75"
              data-testid="unassign-btn"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Unassign
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BadgePrintingSystemTab should render loading 1`] = `
<div>
  Loading...
</div>
`;

exports[`BadgePrintingSystemTab should render without date 1`] = `
<div>
  <div>
    <div
      class="makeStyles-filterActionsContainer-953 makeStyles-filterActionsContainerPadding-955 makeStyles-buttonWithoutFilter-1011"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-createButton-983 makeStyles-primaryButtonExtraLarge-987 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        data-testid="open-bps-modal-btn"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Assign BPS
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <table
      aria-label="client-list"
      class="MuiTable-root"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Name
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Laptop Serial Number
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Printer Serial Number
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Scanner Serial Number
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Shipping Date
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-1107 makeStyles-clickableRow-1105"
          data-testid="bps-list-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <a
              class="Link-root-1108"
              href="/inventory/badge-printing-system/wizard/77afbfce-1bca-31c3-b512-3a1ed78742bb"
              title="Edit BPS"
            >
              Badge Printer Name
            </a>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            AFF12903112
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            12904328913
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            BBF19021
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            -
          </td>
        </tr>
      </tbody>
    </table>
    <nav
      aria-label="pagination navigation"
      class="MuiPagination-root  makeStyles-pagination-1109"
      data-testid="pagination"
    >
      <ul
        class="MuiPagination-ul"
      >
        <li>
          <button
            aria-label="Go to previous page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-current="true"
            aria-label="page 1"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-selected"
            tabindex="0"
            type="button"
          >
            1
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </li>
        <li>
          <button
            aria-label="Go to next page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </nav>
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-1118 makeStyles-close-1129 closed"
      data-testid="drawer"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-1119 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
        style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
      >
        <div
          class="makeStyles-drawerButtonWrapper-1121"
        >
          <div
            class="makeStyles-drawerButton-1122"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text"
              data-testid="drawer-close-btn"
              style="outline: none;"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <svg>
                  close.svg
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="makeStyles-drawerHeader-1120"
          >
            <p
              class="MuiTypography-root makeStyles-drawerTitle-1123 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
            >
              Device Information
            </p>
          </div>
        </div>
        <div
          class="makeStyles-summaryDeviceDetail-1135"
        >
          <div
            class="makeStyles-company-1139"
          >
            <div
              class="makeStyles-drawerOverflowWrapper-1154"
            >
              <div
                class="makeStyles-drawerText-1146"
              >
                <p
                  class="MuiTypography-root makeStyles-deviceAccent-1140 makeStyles-entityTitle-1149 MuiTypography-body1"
                />
                <div
                  class="makeStyles-drawerMainText-1147"
                >
                  <span>
                    No project assigned
                  </span>
                  <span />
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-1142"
              >
                <svg
                  class="makeStyles-drawerNotesIcon-1143"
                >
                  notes.svg
                </svg>
                <div
                  class="makeStyles-drawerText-1146 makeStyles-drawerTextSeparation-1148"
                >
                  <span>
                    -
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-1142"
              >
                <div
                  class="makeStyles-drawerText-1146"
                >
                  <p
                    class="MuiTypography-root makeStyles-deviceAccent-1140 makeStyles-entityTitle-1149 MuiTypography-body1"
                  >
                    Laptop
                  </p>
                  <div
                    class="makeStyles-drawerMainText-1147"
                  >
                    <span>
                      -
                    </span>
                    <span>
                      -
                    </span>
                    <span>
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-1142"
              >
                <div
                  class="makeStyles-drawerColumnDirection-1153"
                >
                  <div
                    class="makeStyles-drawerRowDirection-1152"
                  >
                    <svg
                      class="makeStyles-drawerMonetizationIcon-1145 makeStyles-bpsIconSize-1155"
                    >
                      monetization.svg
                    </svg>
                    <div
                      class="makeStyles-drawerText-1146 makeStyles-drawerTextSeparation-1148"
                    >
                      <span>
                        $
                        -
                      </span>
                      <span>
                        -
                      </span>
                      <span>
                        Invoiced 
                        -
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-1142"
              >
                <div
                  class="makeStyles-drawerRowDirection-1152"
                >
                  <svg
                    class="makeStyles-bpsIconSize-1155"
                  >
                    device-status.svg
                  </svg>
                  <div
                    class="makeStyles-drawerText-1146 makeStyles-drawerTextSeparation-1148"
                  >
                    <span>
                      Order/Purchase Date:
                       
                      
                    </span>
                    <span>
                      Warranty Expiration Date:
                       
                      
                    </span>
                    <span>
                      In Service Date:
                       
                      
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-1142"
              >
                <svg
                  class="makeStyles-drawerSecondaryNotesIcon-1144"
                >
                  notes.svg
                </svg>
                <div
                  class="makeStyles-drawerText-1146 makeStyles-drawerTextSeparation-1148"
                >
                  <span>
                    -
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-1142"
              >
                <div
                  class="makeStyles-drawerText-1146"
                >
                  <p
                    class="MuiTypography-root makeStyles-deviceAccent-1140 makeStyles-entityTitle-1149 MuiTypography-body1"
                  >
                    Printer
                  </p>
                  <div
                    class="makeStyles-drawerMainText-1147"
                  >
                    <span>
                      -
                    </span>
                    <span>
                      -
                    </span>
                    <span>
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-1142"
              >
                <div
                  class="makeStyles-drawerColumnDirection-1153"
                >
                  <div
                    class="makeStyles-drawerRowDirection-1152"
                  >
                    <svg
                      class="makeStyles-drawerMonetizationIcon-1145"
                    >
                      monetization.svg
                    </svg>
                    <div
                      class="makeStyles-drawerText-1146 makeStyles-drawerTextSeparation-1148"
                    >
                      <span>
                        $
                        -
                      </span>
                      <span>
                        -
                      </span>
                      <span>
                        Invoiced 
                        -
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-1142"
              >
                <div
                  class="makeStyles-drawerRowDirection-1152"
                >
                  <svg
                    class="makeStyles-bpsIconSize-1155"
                  >
                    device-status.svg
                  </svg>
                  <div
                    class="makeStyles-drawerText-1146 makeStyles-drawerTextSeparation-1148"
                  >
                    <span>
                      Order/Purchase Date:
                       
                      
                    </span>
                    <span>
                      Warranty Expiration Date:
                       
                      
                    </span>
                    <span>
                      Last Maintenance Date:
                       
                      
                    </span>
                    <span>
                      In Service Date:
                       
                      
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-1142"
              >
                <svg
                  class="makeStyles-drawerSecondaryNotesIcon-1144"
                >
                  notes.svg
                </svg>
                <div
                  class="makeStyles-drawerText-1146 makeStyles-drawerTextSeparation-1148"
                >
                  <span>
                    -
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-1142"
              >
                <div
                  class="makeStyles-drawerText-1146"
                >
                  <p
                    class="MuiTypography-root makeStyles-deviceAccent-1140 makeStyles-entityTitle-1149 MuiTypography-body1"
                  >
                    Scanner
                  </p>
                  <div
                    class="makeStyles-drawerMainText-1147"
                  >
                    <span>
                      -
                    </span>
                    <span>
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-1142"
              >
                <div
                  class="makeStyles-drawerColumnDirection-1153"
                >
                  <div
                    class="makeStyles-drawerRowDirection-1152"
                  >
                    <svg
                      class="makeStyles-drawerMonetizationIcon-1145"
                    >
                      monetization.svg
                    </svg>
                    <div
                      class="makeStyles-drawerText-1146 makeStyles-drawerTextSeparation-1148"
                    >
                      <span>
                        $
                        -
                      </span>
                      <span>
                        -
                      </span>
                      <span>
                        Invoiced 
                        -
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-1142"
              >
                <div
                  class="makeStyles-drawerRowDirection-1152"
                >
                  <svg
                    class="makeStyles-bpsIconSize-1155"
                  >
                    device-status.svg
                  </svg>
                  <div
                    class="makeStyles-drawerText-1146 makeStyles-drawerTextSeparation-1148"
                  >
                    <span>
                      Order/Purchase Date:
                       
                      
                    </span>
                    <span>
                      Warranty Expiration Date:
                       
                      
                    </span>
                    <span>
                      In Service Date:
                       
                      
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-drawerSection-1142"
              >
                <svg
                  class="makeStyles-drawerSecondaryNotesIcon-1144"
                >
                  notes.svg
                </svg>
                <div
                  class="makeStyles-drawerText-1146 makeStyles-drawerTextSeparation-1148"
                >
                  <span>
                    -
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root makeStyles-drawerDivider-1021"
        />
        <div
          class="makeStyles-ctaWrapper-1100"
        >
          <span
            class=""
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-drawerCTA-990 makeStyles-borderPrimaryButton-982"
              data-testid="bps-edition-modal-open-btn"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Edit Date
              </span>
            </button>
          </span>
          <span
            class=""
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-drawerCTA-990 makeStyles-warningButton-991"
              data-testid="unassign-btn"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Unassign
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
